--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SUPABASE_URL=your-project-url
+NEXT_PUBLIC_SUPABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.ybznwvbkidehyafccokv.supabase.co:5432/postgres
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
